[package]
name = "muvim"
version = "0.1.0"
authors = ["solanav <solanav@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.10"
tui = { version = "0.8", default-features = false, features = ['crossterm'] }
crossterm = "0.14"